<resources>
    <string name="app_name">Fraktus</string>
    <string name="sign_up">sign up</string>
    <string name="enter_password">enter password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="repeat_password">repeat password</string>
    <string name="invalid_email">User with this email already exists</string>
    <string name="invalid">Invalid</string>
    <string name="signup_failed">Unable to register. Check your connection</string>
    <string name="already_account">already have an account? log in</string>
    <string name="no_account">no account? create one</string>
    <string name="log_in">log in</string>
    <string name="login_failed">Unable to log in. Check your connection</string>
    <string name="invalid_email_or_password">Email or password is invalid</string>
    <string name="intro_title">Hello!\n Welcome to Fraktus</string>
    <string name="sign_up_privacy">signing up you agree to our privacy policy</string>
    <string name="signup_title">Start by\ncreating an account</string>
    <string name="login_title">Log in\nto existing account</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="settings_log_out">log out</string>
    <string name="delete_account">delete account</string>
    <string name="edit_channel">edit channel</string>
    <string name="delete_channel">delete channel</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="channel_name">channel name</string>
    <string name="delete_channel_body">Are you sure you want to delete %1$s?</string>
    <string name="delete">delete</string>
    <string name="add_new_channel">add new channel</string>
    <string name="channels_no_last_message">No notes here yet…</string>
    <string name="edit_workspace">edit workspace</string>
    <string name="delete_workspace">delete workspace</string>
    <string name="error_workspace_no_user">Please relogin to see workspaces</string>
    <string name="delete_workspace_body">Are you sure you want to delete %1$s?\n\nAll content inside, including child workspaces, channels and messages, will be also deleted.</string>
    <string name="hint_message_send">take a note…</string>
    <string name="retry">retry</string>
    <string name="log_out">log out</string>
    <string name="dialog_log_out_message">Are you sure you want to log out from the current account?</string>
    <string name="launch_too_much_users">Make sure you have only 1 account</string>
    <string name="dialog_delete_account_message">Are you sure you want to delete account?\nYour account with all notes, channels and workspaces will be deleted forever. Type your email to confirm</string>
    <string name="delete_failed">deletion failed</string>
    <string name="ok">ok</string>
    <string name="dialog_account_deleted_message">Your account has been successfully deleted. We hope you’ll come back soon to start with a blank list</string>
    <string name="account_deleted">account deleted</string>
    <string name="copy_text">copy text</string>
    <string name="delete_note">delete note</string>
    <string name="share_note">share note</string>
    <string name="text_copied">Text copied!</string>
    <string name="favourite_channels">favourite channels</string>
    <string name="favourite_channels_limit_exceeded">You can have max 4 favourite channels</string>
    <string name="favourites_no_channels">you don’t have favourite\nchannels yet</string>
    <string name="send_message">send message</string>
    <string name="send">send</string>
    <string name="channel_message_send">Do you want to send this message to %1$s?</string>
    <string name="error_message_not_send">Message hasn\'t been sent</string>
    <string name="too_long_message">This message is too short or too long</string>
    <string name="no_connection">Check your connection</string>
    <string name="add_new_workspace">add new workspace</string>
    <string name="workspace_name">workspace name</string>
    <string name="error_channel_update_failed">Update failed :(</string>
    <string name="error_workspace_not_created">"workspace not created :("</string>
    <string name="error_channel_not_created">channel not created :(</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="no_workspaces">you don’t have any\nworkspaces here yet</string>
    <string name="no_channels">you don’t have any\nchannels here yet</string>
    <string name="forgot_password">Forgot password?</string>
</resources>