<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_top_padding"
        android:paddingBottom="@dimen/dialog_bottom_padding">

        <TextView
            android:id="@+id/delete_account"
            style="@style/AlertDialog.TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:text="@string/delete_account"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/message"
            style="@style/AlertDialog.BodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="9"
            android:text="@string/dialog_delete_account_message"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/guideline_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_title"
            app:layout_constraintTop_toBottomOf="@id/email" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Text.TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message">

            <app.rootstock.views.BaseInputEditText
                style="@style/Text.EditText.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edit_text_white"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>