<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/hello"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline_hello" />

        <ImageView
            android:layout_marginTop="@dimen/padding_32"
            android:id="@+id/hello_illustration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello"
            android:src="@drawable/ic_hello_screen_illustration"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            style="@style/AppMaterialButton.Base"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:layout_constraintVertical_bias=".9"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/hello_illustration"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            style="@style/AppMaterialButton.WhiteBackground"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:text="@string/log_in"
            android:layout_marginBottom="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>