<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_top_padding"
        android:paddingBottom="@dimen/dialog_bottom_padding">

        <TextView
            android:id="@+id/account_deleted"
            style="@style/AlertDialog.TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:text="@string/account_deleted"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/illustration"
            android:layout_marginTop="@dimen/padding_16"
            android:src="@drawable/ic_account_deleted_illustration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/account_deleted"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/message"
            style="@style/AlertDialog.BodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/dialog_account_deleted_message"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/illustration" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ok"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>