<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="workspace"
            type="app.rootstock.data.workspace.WorkspaceI" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_top_padding"
        android:paddingBottom="@dimen/dialog_bottom_padding">

        <TextView
            android:id="@+id/workspace_name"
            style="@style/AlertDialog.TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:text="@string/edit_workspace"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/workspace_edit_name"
            style="@style/Text.TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workspace_name">

            <app.rootstock.views.BaseInputEditText
                android:id="@+id/workspace_edit_name_text"
                style="@style/Text.EditText.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edit_text_white"
                android:hint="@string/workspace_name"
                android:inputType="text"
                android:maxLength="@dimen/max_channel_name"
                android:maxLines="1"
                android:text="@{workspace.name}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/colorsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toBottomOf="@id/workspace_edit_name"
            app:spanCount="4"
            tools:itemCount="1"
            tools:listitem="@layout/item_color_channel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/guideline_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/colorsRv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_title"
            app:layout_constraintTop_toBottomOf="@id/colorsRv" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>