<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dialog_top_padding"
        android:paddingBottom="@dimen/dialog_bottom_padding">

        <TextView
            android:id="@+id/delete_account"
            style="@style/AlertDialog.TitleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="1"
            android:text="@string/log_out"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/message"
            style="@style/AlertDialog.BodyText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:maxLines="6"
            android:text="@string/dialog_log_out_message"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:text="@string/cancel"
            android:textAllCaps="false"
            app:layout_constraintEnd_toStartOf="@+id/guideline_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            style="@style/AlertDialog.ButtonBar.Base"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline_title"
            app:layout_constraintTop_toBottomOf="@id/message" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>