<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="app.rootstock.ui.signup.SignUpViewModel" />

        <import type="app.rootstock.ui.signup.EventUserSignUp" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/header_signup"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />
        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Text.TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@id/guideline_header"
            android:layout_marginTop="40dp"
            app:error="@{viewmodel.user.emailValid}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <app.rootstock.views.BaseInputEditText
                style="@style/Text.EditText.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edit_text_white"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:text="@={viewmodel.user.email}" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Text.TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:error="@{viewmodel.user.passwordValid}"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <app.rootstock.views.BaseInputEditText
                style="@style/Text.EditText.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edit_text_white"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@={viewmodel.user.password}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_repeat"
            style="@style/Text.TextInputLayout.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            app:error="@{viewmodel.user.passwordRepeatValid}"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <app.rootstock.views.BaseInputEditText
                style="@style/Text.EditText.Base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/form_edit_text_white"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:maxLength="32"
                android:maxLines="1"
                android:text="@={viewmodel.user.passwordRepeat}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/AppMaterialButton.Base"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            app:layout_constraintTop_toBottomOf="@id/password_repeat"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="@{()->viewmodel.signUp()}"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            loading="@{viewmodel.loading}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/privacy_policy"
            style="@style/Text.Info.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_privacy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/materialButton" />

        <TextView
            android:id="@+id/hello"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/white"
            android:maxLines="2"
            android:text="@string/signup_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_title" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <include
            tools:visibility="gone"
            android:id="@+id/include"
            layout="@layout/dark_overlay"
            bind:isLoading="@{viewmodel.loading}">
        </include>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
